--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.0.0-rc.1",
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0-rc.2",
+    "resend": "^4.1.2",
     "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.5"
   },
@@ -31,6 +32,7 @@
     "eslint-config-next": "15.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "v": "^0.3.0"
   }
 }
